Job 3 Changes